<resources>
    <string name="app_name">Swoosh</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_legue">Find a team in your city, and dominate the legue</string>
    <string name="get_started">GET STARTED</string>
    <string name="imageview2">imageView2</string>
    <string name="imageview">imageView</string>
    <string name="mens">Mens</string>

    <string name="next">NEXT</string>
    <string name="desired_league">Desired League</string>

    <string name="womens">Womens</string>

    <string name="co_ed">Co-Ed</string>

    <string name="imageview3">imageView3</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>


</resources>
